nuevos avances y correcion de errores

--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -20,3 +20,10 @@
         background-color: v.$verde;
     }
 }
+.instruciones{
+    P{
+        font-size: 1.5rem;
+        color: v.$gris_txt;
+        margin-bottom: 2.5rem;
+    }
+}
